# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.96.96 - XXX

  From Steven Knight:

  - Back out (most of) the Windows registry installer patch, which
    seems to not work on some versions of Windows.

  From Jean-Baptiste Lab:

  - Remove hard-coded dependency on Python 2.2 from Debian packaging files.



RELEASE 0.96.95 - Mon, 12 Feb 2007 20:25:16 -0600

  From Anatoly:

  - Add the scons.org URL and a package description to the setup.py
    arguments.

  - Have the Windows installer add a registry entry for scons.bat in the
    "App Paths" key, so scons.bat can be executed without adding the
    directory to the %PATH%.  (Python itself works this way.)

  From Anonymous:

  - Fix looking for default paths in Visual Studio 8.0 (and later).

  - Add -lm to the list of default D libraries for linking.

  From Matt Doar:

  - Provide a more complete write-your-own-Scanner example in the man page.

  From Ralf W. Grosse-Kunstleve:

  - Contributed upstream Python change to our copied subprocess.py module
    for more efficient standard input processing.

  From Steven Knight:

  - Fix the Node.FS.Base.rel_path() method when the two nodes are on
    different drive letters.  (This caused an infinite loop when
    trying to write .sconsign files.)

  - Fully support Scanners that use a dictionary to map file suffixes
    to other scanners.

  - Support delayed evaluation of the $SPAWN variable to allow selection
    of a function via ${} string expansions.

  - Add --srcdir as a synonym for -Y/--repository.

  - Document limitations of #include "file.h" with Repository().

  - Fix use of a toolpath under the source directory of a BuildDir().

  - Fix env.Install() with a file name portion that begins with '#'.

  - Fix ParseConfig()'s handling of multiple options in a string that's
    replaced a *FLAGS construction variable.
