@@ -286,6 +286,35 @@ public abstract class TestClass
         assert classes == ['TestClass$1', 'TestClass$2', 'TestClass'], classes
 
 
+    def test_dot_class_attributes(self):
+        """Test handling ".class" attributes"""
+        pkg_dir, classes = SCons.Tool.JavaCommon.parse_java("""\
+public class Test extends Object
+{
+    static {
+        Class c = Object[].class;
+        Object[] s = new Object[] {};
+    }
+}
+""")
+        assert classes == ['Test'], classes
+
+        pkg_dir, classes = SCons.Tool.JavaCommon.parse_java("""\
+public class A {
+    public class B {
+        public void F(Object[] o) {
+            F(new Object[] {Object[].class});
+        }
+        public void G(Object[] o) {
+            F(new Object[] {});
+        }
+    }
+}
+""")
+        assert pkg_dir == None, pkg_dir
+        assert classes == ['A$B', 'A'], classes
+
+
 
 if __name__ == "__main__":
     suite = unittest.TestSuite()
