@@ -15,6 +15,8 @@ RELEASE 0.96.96 - XXX
   - Back out (most of) the Windows registry installer patch, which
     seems to not work on some versions of Windows.
 
+  - Don't treat Java ".class" attributes as defining an inner class.
+
   From Jean-Baptiste Lab:
 
   - Remove hard-coded dependency on Python 2.2 from Debian packaging files.
